--- a/tutes-and-labs/09-tute.ipynb
+++ b/tutes-and-labs/09-tute.ipynb
@@ -62,10 +62,30 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "salgZsA3xNGI"
+      },
+      "source": [
+        "## Usability\n",
+        "Try to come up with examples of websites or applications that you feel have poor user interfaces.\n",
+        "Are you able to identify which, if any, of the Nielsen Usability Heuristics have been violated?\n",
+        "\n",
+        "Here's a starting point, but you're encouraged to find your own:\n",
+        " * http://www.gatesnfences.com\n",
+        " * https://arngren.net/\n",
+        " * http://www.rudgwicksteamshow.co.uk/\n",
+        " * https://www.lingscars.com/\n",
+        " * http://cloud9walkers.com/"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "Csx1_wm_uwA9"
       },
       "source": [
-        "## Revision"
+        "## Revision\n",
+        "\n",
+        "This section is quite long. Do as much as you have time for and leave the rest for next week's tutorial. (There will be time then to finish it.)"
       ]
     },
     {
@@ -302,6 +322,149 @@
         "assert spamify(example_synonyms, \"The food was awful. There, I said it.\") == \"The food was unpleasant. There, I said it.\"\n",
         "assert spamify(example_synonyms, \"Was it really that awful?\") == \"Was it really that unpleasant?\"\n",
         "assert spamify(example_synonyms, \"That's amazing, incredible, fantastic!\") == \"That's incredible, unbelievable, amazing!\""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "H8Rr9ABTx494"
+      },
+      "source": [
+        "### Holiday Home Finder\n",
+        "\n",
+        "The following dictionary contains some holiday accommodation options. Each site has a cost per night, the number of people it sleeps, the rating, and a list of amenities. For the rating, `*` is poorly rated accommodation, all the way up to `*****` which is very well rated accommodation. The cost is in total for the entire room/site which can sleep multiple people."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Bbam2kYDx7j9"
+      },
+      "source": [
+        "accommodations = {\n",
+        "    \"Beachside B&B\": {\n",
+        "        \"rating\": \"****\",\n",
+        "        \"maximum_guests\": 2, \n",
+        "        \"amenities\": [\"TV\", \"Wi-Fi\", \"air-con\"],\n",
+        "        \"price\": 400\n",
+        "    },\n",
+        "    \"Mountain Motel\": {\n",
+        "        \"rating\": \"*****\",\n",
+        "        \"maximum_guests\": 5,\n",
+        "        \"amenities\": [\"carbon monoxide alarm\", \"TV\", \"parking\", \"Wi-Fi\"],\n",
+        "        \"price\": 891\n",
+        "    },\n",
+        "    \"Suburbian Stay\": {\n",
+        "        \"rating\": \"*\",\n",
+        "        \"maximum_guests\": 4,\n",
+        "        \"amenities\": [\"Wi-Fi\", \"parking\", \"air-con\", \"pets allowed\", \"TV\"],\n",
+        "        \"price\": 370\n",
+        "    },\n",
+        "    \"Tropical Tavern\": {\n",
+        "        \"rating\": \"***\",\n",
+        "        \"maximum_guests\": 3,\n",
+        "        \"amenities\": [\"parking\"],\n",
+        "        \"price\": 391\n",
+        "    }\n",
+        "}"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "OiSCRqscx-r4"
+      },
+      "source": [
+        "Suppose you and a group of friends want to go on a holiday together, but are unsure which accommodation options meet everyone's requirements. Each group member will specify:\n",
+        "\n",
+        "* A maximum contribution towards the cost per night that they can afford. **You can assume that each person shares the cost of the accommodation equally.**\n",
+        "\n",
+        "* Minimum rating.\n",
+        "\n",
+        "* Requirements like a parking space or pets allowed. If they have no requirements, this will be an empty list.\n",
+        "\n",
+        "\n",
+        "As well as these individual requirements, **the accommodation needs to have enough beds for everyone.**\n",
+        "\n",
+        "Implement the function `suitable_accommodations(preferences)`, that, given everyone's individual preference, determines all accommodation options that meet *all* preferences. See the testing cell below for examples.\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DVpDJ3Fgx-Yb"
+      },
+      "source": [
+        "def suitable_accommodations(accomodations, preferences):\n",
+        "  # Write your code here"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "onXd2ywxyE7y"
+      },
+      "source": [
+        "Use this cell to test your function"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3HA92ftxyGV0"
+      },
+      "source": [
+        "assert suitable_accommodations(accomodations, [\n",
+        "    { \"minimum_rating\": \"***\", \"amenities\": [], \"maximum_price\": 500 }\n",
+        "    ]) == [\"Beachside B&B\", \"Tropical Tavern\"]\n",
+        "\n",
+        "assert suitable_accommodations(accomodations, [\n",
+        "    { \"minimum_rating\": \"*\", \"amenities\": [], \"maximum_price\": 500 }, \n",
+        "    { \"minimum_rating\": \"\", \"amenities\": [\"parking\"], \"maximum_price\": 400 }\n",
+        "    ]) == [\"Suburbian Stay\", \"Tropical Tavern\"]\n",
+        "\n",
+        "assert suitable_accommodations(accomodations, [\n",
+        "    { \"minimum_rating\": \"*\", \"amenities\": [], \"maximum_price\": 500 }, \n",
+        "    { \"minimum_rating\": \"***\", \"amenities\": [\"parking\"], \"maximum_price\": 400 }\n",
+        "    ]) == [\"Tropical Tavern\"]\n",
+        "\n",
+        "assert suitable_accommodations(accomodations, [\n",
+        "    { \"minimum_rating\": \"****\", \"amenities\": [], \"maximum_price\": 500 },\n",
+        "    { \"minimum_rating\": \"***\", \"amenities\": [\"parking\"], \"maximum_price\": 400 }\n",
+        "    ]) == []\n",
+        "\n",
+        "assert suitable_accommodations(accomodations, [\n",
+        "    { \"minimum_rating\": \"****\", \"amenities\": [], \"maximum_price\": 500 },\n",
+        "    { \"minimum_rating\": \"***\", \"amenities\": [\"air-con\"], \"maximum_price\": 400 }\n",
+        "    ]) == [\"Beachside B&B\"]\n",
+        "\n",
+        "assert suitable_accommodations(accomodations, [\n",
+        "    { \"minimum_rating\": \"****\", \"amenities\": [], \"maximum_price\": 500 },\n",
+        "    { \"minimum_rating\": \"***\", \"amenities\": [\"air-con\"], \"maximum_price\": 400 },\n",
+        "    { \"minimum_rating\": \"****\", \"amenities\": [], \"maximum_price\": 400 }\n",
+        "    ]) == []\n",
+        "\n",
+        "assert suitable_accommodations(accomodations, [\n",
+        "    { \"minimum_rating\": \"\", \"amenities\": [], \"maximum_price\": 500 },\n",
+        "    { \"minimum_rating\": \"*\", \"amenities\": [\"air-con\"], \"maximum_price\": 400 },\n",
+        "    { \"minimum_rating\": \"\", \"amenities\": [], \"maximum_price\": 400 }\n",
+        "    ]) == [\"Suburbian Stay\"]\n",
+        "\n",
+        "assert suitable_accommodations(accomodations, [\n",
+        "    { \"minimum_rating\": \"\", \"amenities\": [], \"maximum_price\": 200 },\n",
+        "    { \"minimum_rating\": \"*\", \"amenities\": [\"air-con\"], \"maximum_price\": 185 },\n",
+        "    ]) == [\"Suburbian Stay\"]\n",
+        "\n",
+        "assert suitable_accommodations(accomodations, [\n",
+        "    { \"minimum_rating\": \"\", \"amenities\": [], \"maximum_price\": 200 },\n",
+        "    { \"minimum_rating\": \"*\", \"amenities\": [\"air-con\"], \"maximum_price\": 180 },\n",
+        "    ]) == []"
       ],
       "execution_count": null,
       "outputs": []
