--- a/tutes-and-labs/10-tute.ipynb
+++ b/tutes-and-labs/10-tute.ipynb
@@ -65,9 +65,7 @@
       "source": [
         "## Revision\n",
         "\n",
-        "Finish any questions you didn't have time for last week.\n",
-        "\n",
-        "If you have any questions remaining from this term, this is your chance to get them answered."
+        "If you have any tutorial questions remaining from this term, this is your chance to get them answered."
       ]
     }
   ]
