--- a/tutes-and-labs/10-lab.ipynb
+++ b/tutes-and-labs/10-lab.ipynb
@@ -57,17 +57,7 @@
       "source": [
         "## Practice Exam (0 marks)\n",
         "\n",
-        "The main purpose of this task is to help you gain familiarity with the way in which the exam will be run.\n",
-        "\n",
-        "You will be provided with some easy sample exam questions which will give you a chance to revise some of the course content, and ensure you know how to complete and submit your exam.\n",
-        "\n",
-        "**Submit by:** Thursday 25th November 23:59:00\n",
-        "\n",
-        "**Sim e-mail confirmation by:** Saturday 27th November 23:59:00\n",
-        "\n",
-        "The confirmation will include a copy of what was successfully submitted.\n",
-        "\n",
-        "TODO: Sim to finish releasing this."
+        "Use the rest of your lab time to work on your [practice exam](https://webcms3.cse.unsw.edu.au/COMP1010/21T3/resources/69192)."
       ]
     }
   ]
